--- a/index.html
+++ b/index.html
@@ -1,136 +1,207 @@
 <html>
 <head>
   <title>Tests</title>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <link href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
+  <link href="http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">  
+  <script type="text/javascript" src="../jquery.js"></script>
   <script type="text/javascript" src="jquery.form-dependencies.js"></script>
 
   <script type="text/javascript">
 
     jQuery(document).ready(function($){
 
-      $("#test1").FormDependencies();
+      var f1 = function(){
+            $("#test1").FormDependencies();
 
-      $("#test2").FormDependencies({
-        disable_only   : false,
-        clear_inactive : true
-      });
+            $("#test2").FormDependencies({
+              inactiveClass : 'hidden',
+              clearValues   : true
+            });
+          },
+
+          bench = function(method, iterations){
+
+            var time = 0,
+                timer = function(action){
+                  var d = +(new Date);
+                  if(time < 1 || action === 'start'){
+                    time = d;
+                    return 0;
+                  }else if (action === 'stop'){
+                    var t = d - time;
+                    time = 0;
+                    return t;
+                  }else{
+                    return d - time;
+                  }
+                };
+
+            var result = [], i = 0, execTime;
+
+            timer('start');
+
+            while(i < iterations){
+              result.push(method.apply());
+              i++;
+            }
+
+            execTime = timer('stop');
+
+            console.log("Mean execution time was: ", execTime / iterations, 'ms');
+            console.log("Sum execution time was: ", execTime, 'ms');
+          };
+
+      bench(f1, 1);
 
     });
 
   </script>
 
   <style type="text/css">
-
-    body{
-      font: 15px Arial;
-      background: #f5f5f5;
-    }
-
+    
     .disabled{
       color: #ddd;
-      text-decoration: line-through;
     }
 
-    p{
-      margin: 40px 0;
+    .hidden{
+      display: none;
+    }    
+
+    select[multiple]{
+      width: 25%;
+      height: 96px;
+      padding: 5px;
     }
 
-    label{
-      margin-right: 10px;
-      cursor: pointer;
-    }
-
-    input, textarea{
-      padding: 5px 10px;
-    }
-
-    div{
-      background: #fff;
-      padding: 5px 20px;
-      margin: 40px auto;
-      width: 740px;
-      border-radius: 20px;
-      box-shadow: 0 0 10px 10px #eee;
+    .alert.disabled{
+      opacity: 0.5;
     }
 
   </style>
 </head>
 <body>
 
-  <div id="test1">
-    <h1>Testing Defaults</h1>
-    <p>
-      <select name="s1" id="s1">
-        <option value="dr2">Disable last two radios</option>
-        <option value="dr1">Disable first radio</option>
-        <option>Enable All</option>
-      </select>
-      <label for="r1"><input type="radio" name="rr" id="r1" value="yes" checked="checked" rules="CONFLICTS WITH s1 BEING dr1">The</label>
-      <label for="r2"><input type="radio" name="rr" id="r2" value="no">Radio</label>
-      <label for="r3"><input type="radio" name="rr" id="r3" value="no" rules="CONFLICTS WITH s1 BEING dr2">Ga</label>
-      <label for="r4"><input type="radio" name="rr" id="r4" value="no" rules="CONFLICTS WITH s1 BEING dr2">Ga</label>
-    </p>
+  <div class="container">
 
-    <p>
-      <label for="c1"><input type="checkbox" id="c1" name="c1">Check</label>
-      <label for="c2"><input type="checkbox" id="c2" name="c2">Check</label>
-      <label for="c3"><input type="checkbox" id="c3" name="c3">Don't</label>
-      <label for="t1">Text <input type="text" id="t1" name="t1" rules="DEPENDS ON c1 AND DEPENDS ON c2 AND CONFLICTS WITH c3"></label>
-      <label for="t2">More <input type="text" id="t2" name="t2" rules="CONFLICTS WITH t1 BEING EMPTY"></label>
-    </p>
+    <h1>Form Dependencies - Test</h1>    
 
-    <p>
-      <label for="c5"><input type="checkbox" id="c5" name="c5">Enable select</label>
-      <select name="s2" rules="DEPENDS ON c5" id="s2">
-        <option>one</option>
-        <option>trick</option>
-        <option>pony</option>
-      </select>
-    </p>
+    <div id="test1">
+      <h3>Defaults</h3>
 
-    <p>
-      <label for="t5">Type "<strong>Agree</strong>" <input type="text" id="t5" name="t5" value=""></label>
-      <input type="submit" id="b1" name="b1" rules="DEPENDS ON t5 BEING Agree" value="submit">
-    </p>
+      <ol>
+        <li>
+          <form class="form-inline">
+            <select class="input-xlarge" name="first" id="first">
+              <option value="a">Enable 1st radio and submit</option>
+              <option value="b">Enable last 2 radios</option>
+              <option value="c">Enable all radios but submit</option>
+            </select>
+            <label for="r1" class="radio"><input type="radio" name="rr" id="r1" value="1" checked="checked" data-depends-on="first:a|c">Fry</label>
+            <label for="r2" class="radio"><input type="radio" name="rr" id="r2" value="2" data-depends-on="first:c">Me</label>
+            <label for="r3" class="radio"><input type="radio" name="rr" id="r3" value="3" data-depends-on="first:b|c">A</label>
+            <label for="r4" class="radio"><input type="radio" name="rr" id="r4" value="4" data-depends-on="first:b|c">Beaver</label>
+            <input type="submit" class="btn" id="b1" name="b1" data-depends-on="first:a" value="submit">
+          </form>
+        </li>
+
+        <li>
+          <form class="form-inline">
+            <label for="c1" class="checkbox"><input type="checkbox" id="c1" name="c1">Check</label>
+            <label for="c2" class="checkbox"><input type="checkbox" id="c2" name="c2">Check</label>
+            <label for="c3" class="checkbox"><input type="checkbox" id="c3" name="c3">Don't</label>
+            <label for="txt1">Text</label> <input class="input-small" type="text" id="txt1" name="txt1" data-depends-on="c1 + c2 + !c3" />
+            <label for="txt2">More</label> <input class="input-small" type="text" id="txt2" name="txt2" data-depends-on="!txt1" />
+          </form>
+        </li>
+
+        <li>
+          <form class="form-inline">
+            <label for="radiokey1" class="radio"><input type="radio" name="radiokey" id="radiokey1" checked="checked" value="hide">Disable</label>
+            <label for="radiokey2" class="radio"><input type="radio" name="radiokey" id="radiokey2" value="show">Enable</label>
+            <select name="omgponies" data-depends-on="radiokey:show" id="omgponies">
+              <option value="one">one</option>
+              <option value="trick">trick</option>
+              <option value="pony">pony</option>
+            </select>
+          </form>
+        </li>
+
+        <li>
+          <form class="form-inline">
+            <label for="simpletext">Type "<strong>Agree</strong>" or "<strong>FU</strong>" to enable button <input type="text" id="simpletext" name="simpletext" value=""></label>
+            <input type="submit" class="btn" id="b2" name="b2" data-depends-on="simpletext:Agree|FU" value="submit">
+          </form>
+        </li>
+
+      </ol>
+
+      <p>
+        Enable <input type="submit"  class="btn" id="xxl" name="xxl" data-depends-on="simpletext:keke + radiokey:show + omgponies:pony + !c2 + first:c" value="complicated"> button if:
+      </p>
+
+      <ul>
+        <li>text at 4. is "<strong>keke</strong>"</li>
+        <li>second radio at 3. is checked, and select is set to "<strong>pony</strong>"</li>
+        <li>second checkbox at 2. is unchecked</li>
+        <li>last option from select box at 1. is selected</li>
+      </ul>
+
+      <div class="alert alert-info" data-depends-on="xxl">This element should be fully visible if the button above is enabled</div>
+
+    </div>
+
+    <div id="test2">
+      <h3>Custom class / clear</h3>
+      <form class="form-inline">
+        <label for="chain" class="checkbox"><input type="checkbox" id="chain" name="chain">Enable Chained Select</label>
+        <select class="input-medium" name="chain1" data-depends-on="chain" id="chain1">
+          <option>stop?</option>
+          <option value="further">go further (1)</option>
+        </select>
+
+        <select class="input-medium" name="chain2" data-depends-on="chain + chain1:further" id="chain2">
+          <option>stop</option>
+          <option value="further">go further (2)</option>
+        </select>
+
+        <select class="input-medium" name="chain3" data-depends-on="chain + chain1:further + chain2:further" id="chain3">
+          <option>stop</option>
+          <option value="further">go further (3)</option>
+        </select>
+
+        <select class="input-medium" name="chain4" data-depends-on="chain + chain1:further + chain2:further + chain3:further" id="chain4">
+          <option>stop</option>
+          <option value="further">go further (4)</option>
+        </select>
+
+        <select class="input-medium" name="chain5" data-depends-on="chain + chain1:further + chain2:further + chain3:further + chain4:further" id="chain5">
+          <option>the</option>
+          <option>end</option>
+        </select>
+        
+      </form>
+
+      <div class="alert alert-success" data-depends-on="chain">This element should be visible only if the checkbox above is checked</div>              
+
+      <form class="form-inline">
+        <label for="ms">Select "<strong>Blue</strong>" and "<strong>Black</strong>"</label><br />
+        <select multiple="multiple" name="ms" id="ms">
+          <option value="red">Red</option>
+          <option value="green">Green</option>
+          <option value="blue">Blue</option>
+          <option value="black">Black</option>
+          <option value="Ewok">Ewok</option>
+        </select>
+        <input type="submit" class="btn btn-success" name="t41" id="ms1" value="Double" data-depends-on="ms:blue,black" />
+        <input type="submit" class="btn btn-success" name="t42" id="ms2" value="Rainbow" data-depends-on="ms:blue,black" />
+        <input type="submit" class="btn btn-success" name="t43" id="ms3" value="Triple Rainbow" data-depends-on="ms:red,blue,black" />
+
+      </form>
+
+    </div>      
+
   </div>
 
-  <div id="test2">
-    <h1>Hide+Clear Fields</h1>
-    <p>
-      <label for="c7"><input type="checkbox" id="c7" name="c7">Enable Chained Select</label>
-      <select name="s7" rules="DEPENDS ON c7" id="s7">
-        <option>stop?</option>
-        <option value="further">go further (1)</option>
-      </select>
-
-      <select name="s8" rules="DEPENDS ON s7 BEING further" id="s8">
-        <option>stop</option>
-        <option value="further">go further (2)</option>
-      </select>
-
-      <select name="s9" rules="DEPENDS ON s8 BEING further" id="s9">
-        <option>the</option>
-        <option>end</option>
-      </select>
-    </p>
-
-
-    <p>
-      <label for="ms">Select "<strong>Blue</strong>" and "<strong>Black</strong>"</label><br />
-      <select multiple="multiple" name="ms" id="ms">
-        <option value="red">Red</option>
-        <option value="green">Green</option>
-        <option value="blue">Blue</option>
-        <option value="black">Black</option>
-        <option value="Ewok">Ewok</option>
-      </select>
-      <br />
-      <input type="submit" name="t41" value="Double" rules="DEPENDS ON ms BEING blue,black" />
-      <input type="submit" name="t42" value="Rainbow" rules="DEPENDS ON ms BEING blue,black" />
-      <input type="submit" name="t43" value="Triple Rainbow" rules="DEPENDS ON ms BEING red,blue,black" />
-
-    </p>
-  </div>
 
 </body>
 </html>
