--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Tests</title>
   <link href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
   <link href="http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">  
-  <script type="text/javascript" src="../jquery.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script type="text/javascript" src="jquery.form-dependencies.js"></script>
 
   <script type="text/javascript">
